--- a/fajr.html
+++ b/fajr.html
@@ -865,7 +865,29 @@
     <!-- Bootstrap JS and dependencies -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="js/script.js"></script>
+
+<script>
+  var topbar = document.getElementById("topbar");
+var sticky = topbar.offsetTop;
+
+function stickyTopbar() {
+    if (window.pageYOffset > 100) {
+        topbar.classList.add("sticky");
+        topbar.style.background = "linear-gradient(180deg, rgba(163,163,163,1) 0%, rgba(255,255,255,0) 61%)";
+        topbar.style.height = "110px"; // Change the height as needed
+    } else {
+        topbar.classList.remove("sticky");
+        topbar.style.background= "#fff";
+        topbar.style.height = "auto"; // Change the height as needed
+    }
+}
+
+window.onscroll = function() {
+    stickyTopbar();
+};
 </script>
+
+
+
   </body>
 </html>
