--- a/fajr.html
+++ b/fajr.html
@@ -36,7 +36,7 @@
             <div class="col-12">
               <h2 class="hd-title">First Rakah</h2>
                 <div class="step-wrap ">
-                    <img class="step-img" src="images/001.svg">
+                    <img class="step-img" src="images/001.svg" alt="Image">
                     <h3 class="step-hd">Qiyam  <span>(Standing)</span></h3>
                     <p class="step-des">In the standing position, raise both hands so that your fingertips are in line with the shoulders or ears. Your palms should be facing outward. Then say:</p>
                     <div class="step-per-wrap">
